# raytracer

./: .gitignore  Cargo.toml  README.md  bench.py  lefthook.yml  regression_test.py
.github/workflows/: rust.yml
samples/animations/: csg.yml  dragon.yml  planes.yml  refractions.yml  sphere.yml
samples/chapters/: cubes.yml  cylinders.yml  making_patterns.yml  making_scene.yml  planes.yml  reflections.yml  refractions.yml  shadows.yml  triangles.yml
samples/scenes/: cover.yml  dragon.yml
scenes/animations/general/: csg.yml  refractions.yml  sphere.yml  (+2 more)
src/: approx_eq.rs  lib.rs  main.rs  math.rs  playing_around.rs  render.rs  scene.rs  shading.rs  transformation.rs  yaml.rs
src/core/: matrix.rs  point.rs  tuple.rs
src/math/: approx_eq.rs  color.rs  matrix.rs  point.rs  transform.rs  tuple.rs  vector.rs
src/playing_around/: cubes.rs  cylinders.rs  groups.rs  light_and_shading.rs  making_patterns.rs  making_scene.rs  planes.rs  projectiles.rs  rays_and_spheres.rs  reflections.rs  reflections_refractions.rs  refractions.rs  runner.rs  shadows.rs  transformations.rs  triangles.rs  yaml.rs
src/primitive/: matrix.rs  matrix2.rs  matrix3.rs  matrix4.rs  point.rs  tuple.rs  vector.rs
src/render/: animation_renderer.rs  animations.rs  animator.rs  camera.rs  canvas.rs  color.rs  image.rs  intersection.rs  light.rs  material.rs  obj_parser.rs  object.rs  pattern.rs  ray.rs  renderer.rs  scene.rs  shape.rs  world.rs
src/scene/: animation.rs  camera.rs  io.rs  light.rs  obj_model.rs  object.rs
src/shading/: integrator.rs
tests-reference-renders/: README.md
(+45 files in other folders)
