[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
debug = true

[profile.release-lto]
inherits = "release"
lto = "fat"
debug = false
codegen-units = 1

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
derive_builder = "0.20.2"
gif = "0.13.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
libwebp-sys = "0.9.6"
minimp4 = "0.1.2"
openh264 = "0.8.0"
png = "0.17.11"
rayon = "1.8.0"
saphyr = "0.0.3"
webp = "0.3.0"
